# kgasu-schedule

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
bot/: main.py  texts.py
bot/handlers/: __init__.py  menu.py  messages.py  start.py
bot/keyboards/: inline.py
bot/services/: schedule_service.py  user_prefs.py  user_state.py
bot/utils/: fetch.py
scraper/: __main__.py  doc_parse.py  parser.py  scraper.py
scripts/: scraper_loop.sh
tests/: test_doc_parse.py  test_parser.py  test_schedule_service.py
