[project]
name = "kgasu-schedule"
version = "0.1.0"
description = "KGASU schedule Telegram bot and scraper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.17.0",
    "aiohttp==3.11.11",
    "beautifulsoup4==4.12.3",
    "httpx==0.28.1",
    "python-docx==1.1.2",
    "python-dotenv==1.0.1",
    "tzdata==2025.1",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
]

[tool.uv]
package = false
